--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
+    "mongoose": "^8.3.2",
+    "puppeteer": "^22.7.1",
+    "puppeteer-extra": "^3.3.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
